--- a/public/css/style-switcher.css
+++ b/public/css/style-switcher.css
@@ -3,10 +3,10 @@
     --glass1: rgba(255, 255, 255, 0.3); 
 
     --main-color: #ff7900;
-    --bg-color: #faf3dd;
+    --bg-color: #fcfcfc;
     
     --text-color: #fff;
-    --text2-color: #18314f;
+    --text2-color: #565656;
     --text-h3-color: #1c2541;
     
     --text-shadow: 0px 3px 3px rgba(255,255,255,0.5);
@@ -119,7 +119,7 @@
 }
 
 .style-switcher .color-1{
-    background: #F02D3A;
+    background: #F72585;
 }
 .style-switcher .color-2{
     background: #F17300;
