--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -7,6 +7,8 @@ $raleway: 'Raleway', sans-serif;
 $black-ops: 'Black Ops One', cursive;
 $fredericka: 'Fredericka the Great', cursive;
 $rubix: 'Rubik 80s Fade', cursive;
+$alberta-stencil: 'Allerta Stencil', sans empattement;
+$BenchNine: 'BenchNine', sans-serif;
 
 $box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
 $box-shadow1: 20px 20px 50px rgba(0, 0, 0, 0.1);
